static/styles/main.css
/* --- Global --- */
:root {
    --white: #ffffff;
    --black: #000000;
    --brown: #7d5a40;
    --dark-brown: #6c4d40;
    --dark-grey: #404040;
    --green: #4e9b4d;
    --light-green: #61b660;
    --grey: #8d8d8d;
    --light-grey: #cdcdcd;
    --stone-one: #9b9286;
    --super-light-grey: #fcfcfc;

    --main-font: Arial, Helvetica, sans-serif;
}

html,
body {
    margin: 0px;
    padding: 0px;
    min-width: 300px;
}

ul {
    margin: 0px;
    padding: 0px;

    list-style: none;
}

body {
    font-family: var(--main-font, sans-serif);

    background-image: url("/static/assets/Background.png");
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--main-font, sans-serif);
}
h1 {
    font-weight: 800;
    font-size: 2.5rem;
}
h2 {
    font-weight: 700;
    font-size: 2rem;
}
h3 {
    font-weight: 600;
    font-size: 1.9rem;
    padding: 0px;
}

a {
    text-decoration: none;
    color: inherit;
}

p {
    font-size: 1.2rem;
    line-height: 1.6rem;
}

p + p {
    text-indent: 3rem;
}

.content {
    margin: auto;
    width: 90%;
    max-width: 1440px;
}

.subtitle {
    display: block;
    font-weight: 500;
    font-size: 1.5rem;
}

.break {
    margin-left: -100%;
    margin-right: -100%;
}

.center {
    text-align: center;
}

.centered-block {
    padding: calc(0vw + 30px) calc(5vw + 10px);
    text-align: center;
}

.centered-block h1, .centered-block h2, .centered-block h3, .centered-block h4, .centered-block h5, .centered-block h6 {
    margin-top: 0px;
}

.centered-block p {
    max-width: calc(100px + 50vw);
    margin: auto;
}

.large-spacing {
    padding: calc(6vw + 30px) calc(5vw + 10px);
}

.grow {
    transition: all 0.2s ease-in-out;
}

.grow:hover {
    transform: scale(1.05);
}

.btn {
    display: inline-block;

    margin: 10px;

    background-color: var(--green, green);
    color: white;
    padding: 1em 1.5em;
    text-decoration: none;
    text-transform: uppercase;
}

.btn:hover {
    background-color: var(--light-green, grey);
}

/* Main Navbar */
.navbar {
    display: flex;
    justify-content: center;
    align-items: center;

    padding: 20px;
    height: 7vh;

    background-color: var(--super-light-grey, white);
}

.navbar .brand {
    font-family: var(--main-font, sans-serif);
    font-size: 1.3rem;
    font-weight: 800;
    text-decoration: none;
    color: inherit;
}

/* Hero */
.hero {
    display: flex;
    align-items: center;

    padding-left: 10%;
    padding-right: 10%;
    margin: auto;

    min-height: 100px;

    background-image: url("/static/assets/HeroGrass.png"),
        linear-gradient(to top right, #63b0dc, #a6e3ff);
    background-size: 100% auto;
    background-position: bottom;
    background-repeat: no-repeat;
}

.hero-container {
    margin-top: 10vw;
    margin-bottom: 20vw;
}

@media screen and (min-width: 800px) {
    h1 {
        font-size: 4rem;
    }

    .subtitle {
        font-size: 2rem;
    }
}

